<resources>
    <string name="app_name">StatusBarLyricExt</string>

    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="add_package_to_title">Add application</string>

    <!-- Preference Titles -->
    <string name="preferences_header">Prefreences</string>
    <string name="about_header">About</string>
    <string name="enabled_title">Enabled</string>
    <string name="ignored_apps_title">Ignored apps</string>

    <string name="lyric_adapt_request">特殊渠道歌词适配申请</string>

    <!-- Unsupport ROM -->
    <string name="unsupport_rom_title">Unsupport</string>
    <string name="unsupport_rom_summary">Sorry, We don\'t support this ROM</string>

    <!-- Update -->
    <string name="update_available_title">Update Available</string>
    <string name="update_available_message">A new version is available.</string>
    <string name="update_new_version">New version: %1$s</string>
    <string name="update_download">Download</string>
    <string name="update_later">Later</string>

</resources>