<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">


    <PreferenceCategory android:title="@string/preferences_header">
        <SwitchPreference
            android:key="enabled"
            android:title="@string/enabled_title" />
        <cn.binbin323.statuslyricext.preferences.PackageListPreference
            android:title="@string/ignored_apps_title"
            android:key="ignored_packages"
            android:dependency="enabled" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_header"
        android:key="about">

        <Preference
            android:key="app"
            android:title="@string/app_name" />
        <Preference
            android:key="lyricview"
            android:title="LyricView" />
        <Preference
            android:key="lyric_adapt_request"
            android:title="@string/lyric_adapt_request" />
    </PreferenceCategory>

</PreferenceScreen>